  [Michele Simionato]
  * Changed the rupture generation to yield bunches of ruptures, thus avoiding
    the 4GB pickle limit
  * Parallelized the splitting of the sources, thus making the preprocessing
    faster

  [Marco Pagani]
  * Implemented two additional versions of the Silva et al. 2002 GMPE
  * Added the possibility of setting rake to 'undefined'
  * Added first 'modified GMPE' implementing the site term for Canada 2015 model
  * Fixed a bug in the disaggregation calculation due to wrong binning of magnitudes

  [Michele Simionato]
  * Now the combination uniform_hazard_spectra=true and mean_hazard_curves=false
    is accepted again, as requested by Laurentiu Danciu

  [Daniele Viganò]
  * Support for Ubuntu Trusty is removed
  * Replaced supervisord with systemd in Ubuntu packages

  [Michele Simionato]
  * Changed the way the rupture geometries are stored to be consistent with
    the source geometries
  * We are now saving information about the source geometries in the datastore
    (experimentally)
  * Fixed a bug in event based with sampling causing incorrect GMFs
  * Unified all distribution mechanisms to returns the outputs via zmq
  * Added a check for inconsistent IMTs between hazard and risk
  * Replaced the forking processpool with a spawning processpool

python3-oq-engine (3.2.0-1~xenial01) xenial; urgency=low

  [Kendra Johnson]
  * Implemented a version of Munson and Thurber (1997) for use with the
    USGS Hawaii hazard model
  * Implemented PGA for Campbell (1997)

  [Matteo Nastasi]
  * specified 'amd64' as the only architecture supported by ubuntu packages

  [Michele Simionato]
  * Changed the source writer: now the `srcs_weights` are written in the XML
    file only if they are nontrivial
  * Changed the algorithm assigning the seeds: they are now generated before
    the source splitting; also, a seed-related bug in the splitting was fixed
  * For event based, moved the rupture generation in the prefiltering phase

  [Daniele Viganò]